tests/vertical-slice/reject/await_recv_deadline_deferred.hew
// Reject fixture (NEW-6b): `await rx.recv() | after d` — a deadline on a
// suspendable channel RECV await. Only the actor-ask deadline
// (`Result<R, AskError>`, `AskError::Timeout`) is wired in v0.5; recv/next
// deadlines are deferred to v0.6 (their `Option` timeout shaping is not yet
// specced) and fail CLOSED at CHECK time — a precise compile-time diagnostic
// naming the form, NOT a runtime NotYetImplemented and NOT a hang.
//
// Harness verb: hew compile (must fail)
// Expected diagnostic substring: "only supported for actor-ask awaits"
import std::channel::channel;

actor Worker {
    receive fn run() -> i64 {
        let (tx, rx): (channel.Sender<i64>, channel.Receiver<i64>) = channel.new(1);
        let got = await rx.recv() | after 50ms;
        let _ = tx;
        match got {
            Some(v) => v,
            None => -1,
        }
    }
}

fn main() -> i64 {
    let w = spawn Worker;
    match await w.run() {
        Ok(v) => v,
        Err(_e) => 0,
    }
}
